tests/baselines/reference/genericCallWithoutArgs.errors.txt
tests/cases/compiler/genericCallWithoutArgs.ts(4,18): error TS1003: Identifier expected.


==== tests/cases/compiler/genericCallWithoutArgs.ts (1 errors) ====
    function f<X, Y>(x: X, y: Y) {
    }
    
    f<number,string>.
                     
!!! error TS1003: Identifier expected.